@@ -1,3 +1,7 @@
+2005-01-19 Alain Magloire
+	PR 83151
+	* src/org/eclipse/cdt/ui/CElementContentProvider.java
+
 2005-01-11 David Inglis
 	Further fix to 36837
 	
